--- a/src/style/GameBoard.css
+++ b/src/style/GameBoard.css
@@ -1,26 +1,51 @@
-body{
-    margin: 0;
-    padding: 0;
+body {
+  margin: 0;
+  padding: 0;
 }
 .boardBlock {
-    width: 1%;
-    height: 100%;
-    border: 1px solid #000;
-    transition: all 0.1s linear;
+  width: 1%;
+  height: 100%;
+  border: 1px solid rgb(221, 216, 216);
+  transition: all 0.1s linear;
+  margin: 0;
+  padding: 0;
 }
 .boardRow {
-    display: flex;
-    flex-direction: row;
-    width:100vw;
-    height: 1vh;
+  display: flex;
+  flex-direction: row;
+  width: 100vw;
+  height: 0.9vh;
+  overflow: hidden;
 }
-.boardWrapper{
-    width: 100vw;
-    height: 100vh;
+.boardWrapper {
+  width: 100vw;
+  height: 80vh;
+  margin: 0;
+  padding: 0;
 }
 .boardBlock.active {
-    background-color: #000;
+  background-color: #000;
 }
 .boardBlock.inactive {
-    background-color: #FFF;
+  background-color: #fff;
+}
+.preGameMenu {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 15vh;
+}
+.startButton,
+.resetButton {
+  border-radius: 0;
+  background-color: #fff;
+  border: 1px black solid;
+  transition: all 0.25s ease-in-out;
+  margin: 5px;
+}
+.startButton:hover,
+.resetButton:hover {
+  background-color: rgb(161, 157, 157);
 }
